--- a/sample2.html
+++ b/sample2.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>初めてのHTML</title>
+    <link rel="stylesheet" href="style2.css" />
   </head>
 
   <body>
-   DMM WEBCAMP１日目！
-   
+   <h1>サービス紹介</h1>
+
+   <h2>webcamp</h2>
+
+   <p>マンツーマンサポートによる学習で、確実にWebスキルを習得できるプログラミングスクールです。</p>
+
+   <a href="https://www.youtube.com/watch?v=4saawU01oSA">webサイト</a>
   </body>
 </html>
